# Spectrum

./: Makefile.am  README.md  autogen.sh  config.c  configure.ac  dimscreen.sh  sigproc.c  spectrum  spectrum.c
example_files/: config
input/: alsa.h  fifo.h  pulse.c  pulse.h  shmem.h  sndio.h
output/: fbplot.c
